Adds swagger documentation + register changes
