# routes/api.php
@@ -14,14 +14,13 @@ use Illuminate\Support\Facades\Route;
 */
 //get token for login
 Route::post('/login', 'LoginController@login')->name('login');
+Route::middleware('signed')->get('/verifyDevice/{id}/{hash}', 'LoginController@verifyDevice')->name('verification.device');
 
 Route::middleware('auth:api')->group(function () {
-    Route::middleware('signed')->get('/verifyDevice/{id}/{hash}', 'LoginController@verifyDevice')->name('verification.device');
     Route::middleware('throttle:100,10')->get('/registerDevice', 'LoginController@registerDevice')->name('register.device');
 
     Route::middleware('verify.device')->group(function () {
         Route::apiResource('/products', 'ProductsController');
-        Route::apiResource('/tasks', 'TaskController');
     });
 });
 
